tests/baselines/reference/jsxFactoryIsNotDefined2.errors.txt
tests/cases/conformance/jsx/jsxFactoryIsNotDefined2.ts(4,1): error TS2339: Property 'something' does not exist on type '{}'.


==== tests/cases/conformance/jsx/jsxFactoryIsNotDefined2.ts (1 errors) ====
    /// <JSX factory="test.something" />
    var test: {};
    
    <div/>  
    ~~~~~~
!!! error TS2339: Property 'something' does not exist on type '{}'.
    